--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyNews</string>
+    <string name="nav_open">开启</string>
+    <string name="nav_close">关闭</string>
 </resources>
